// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage renders correctly for not found error 1`] = `
<div
  class="d-flex justify-content-center"
>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-title h5"
      >
        Not found
      </div>
      <p
        class="card-text"
      >
        The page you were looking for doesn't seem to exist.
      </p>
      <a
        href="/"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          Go home
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage renders correctly for other error 1`] = `
<div
  class="d-flex justify-content-center"
>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-title h5"
      >
        Error
      </div>
      <p
        class="card-text"
      >
        Something went wrong, sorry about that.
      </p>
      <a
        href="/"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          Go home
        </button>
      </a>
    </div>
  </div>
</div>
`;
